--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <a onclick="closeSocket()">disconnect</a>
 </div>
 <script>
-    const HOST = "ws://localhost:9000";
+    const HOST = "ws://47.106.172.189:9000";
     let ws = null;
     let chatname = "";
     let id = null;
